# bdshare-amibroker-plugin

./: .gitignore  CMakeLists.txt  README.md  test_fetch.py  test_get_form.py
.github/workflows/: release.yml
build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BDShare_DSE.slnx  BDShare_DSE.vcxproj  BDShare_DSE.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
include/: DSEFetcher.h  Plugin.h  Plugin_Legacy.h
scripts/: BDShare_DSE_Dashboard.afl
src/: DSEFetcher.cpp  Plugin.cpp  Plugin.def
